# rust-skeleton

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose-dev.yaml
dockerfiles/: deploy-base.Dockerfile
src/: lib.rs  main.rs
