[package]
name = "rust-skeleton"
version = "0.1.0"
authors = ["Ezequiel Torres Feyuk <ezequiel.torresfeyuk@gmail.com>"]
edition = "2018"

[[bin]]
name = "rust-skeleton"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
amiquip = "0.3.3"